Initial project setup with complete source code